--- a/css/cardz.css
+++ b/css/cardz.css
@@ -5,8 +5,8 @@ html,body{
 display: block;
 width: 100%;
 height: 100%;
-margin: 0;
-padding: 0;
+margin: 1;
+padding: 10;
 }
 
 html,body{
@@ -55,7 +55,7 @@ transition: all 1s;
 nav.cards:hover > a{
 color: #333;
 width: 11%;
-margin-top: 0;
+margin-top: 1;
 }
 
 nav.cards:hover > a:hover{
@@ -71,6 +71,7 @@ display: block;
 nav.cards a span span{
 -webkit-transition: opacity 1s, display 1s;
 transition: opacity 1s, display 1s;
+padding: 0.3em;
 }
 
 nav.cards a span span:nth-child(2){
@@ -90,17 +91,7 @@ nav.cards a img{
 margin-left: -1em;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.detail {
+  font-size: 39px;
+  padding: 0.7em;
+}
